SERVER-13207 Unordered batch writes to a shard with version mismatch can trigger dassert at mongos